@@ -17,9 +17,10 @@ DIST readline51-003 707 RMD160 73d81615e92c8f6f6a4155af571361863014c5df SHA1 fba
 DIST readline51-004 2400 RMD160 a1089571a8104ae5ba9d2c36eb600c09654a3d05 SHA1 7295f43a42d112f2de935150d7c0cb2fd3fceece SHA256 ddb050c0161c9ccdabb84c75287fc8cc76791d096ebfb3e4bdc72f531d8551d1
 DIST readline52-001 874 RMD160 0cedb82ccc4709e6b39e6cb95143131259b0e7c5 SHA1 8de77c2de3926893cbf2688912768bed48a2456b SHA256 eac304c369154059f93049ada328739faaf40338d3cb1fb4b544c93d5ce3f8d5
 DIST readline52-002 1433 RMD160 c9bbff4b1ba2ff77e5a43ad98a94f4753e5f0aa3 SHA1 db5baf0129357ba9397dfcd24e9f6db0abdcbc7a SHA256 9deacaef25507a0c2ae0b661bf9342559b59a2954d66ea3c5f5bcd900fdfcf78
+DIST readline52-003 1204 RMD160 4007b1dcd19d204f6ce75fe5a60a5c780f221a12 SHA1 7a879ce1ccb10ad65c34d3eeced9f4b79ac68434 SHA256 2a55d2ecb1c9b0147aeb193a6323616ab31c1c525a83b2db3a994b15594ba934
+DIST readline52-004 2192 RMD160 7c8ef28a2d4fb6054aa84e0abfbdff0d446c0c90 SHA1 00f91e9784e2c74415bccff8cad4604424c4d470 SHA256 a03b65633781efa7c3aae5d57162985e7b7a3c10acf0f2621be610e16f27e5f2
 EBUILD readline-5.1_p4.ebuild 2867 RMD160 2bbba2795b671c1c20d1417985adf639ea261574 SHA1 343fa736b9906d1412949fd50be26d0e0ce67dfe SHA256 377199f46bfeac11d91ff07e4e2c2bb1423cc4b94e49516bcaf4c5a914f70de0
-EBUILD readline-5.2.ebuild 2744 RMD160 ecf2640b95ce54484ac5562eec624060de7dc8a8 SHA1 9fe685164c59b74867f1d91fa2a35c807f89eb17 SHA256 a683c3f059a86675db329c0e900ea332b48a119c4978403dc4735cd3dedb44c0
-EBUILD readline-5.2_p1.ebuild 2909 RMD160 7974cb06bdebcbbbca42c308b03ab5fa6d34c548 SHA1 6df01f3b7830802b78b43c7eee75b9538acd9169 SHA256 5d35bfa2522ea8f468ca0d2701d60e085e749f200f92b186f683b094bc37afa7
-EBUILD readline-5.2_p2.ebuild 2909 RMD160 da3def529d3e9603ee471ea84ced1f15b0a6c38a SHA1 e8a281f93a24a0bf062289d751ec2f222c7c4326 SHA256 633c6d6419be494afc5bc10eb41d418a14d5e21e5c8fc5c23ff92275e1a58651
-MISC ChangeLog 11935 RMD160 fd852b46327ad1ffa471b867faa198ba0654575e SHA1 8a4387aa0e417dc68256b2401ddc50dfee10fe28 SHA256 2afa965f3f410d33084b8ca3aacc3132320db91b90b564cfa7683a80b9c603cd
+EBUILD readline-5.2_p2.ebuild 2908 RMD160 46b15b2f4f0f55225baed2f69e8dee9ed95cfce4 SHA1 e616609dd4659a581e406b0349fd481b4d97e418 SHA256 8aa76956071b4933404e3799502e45d84c52980306c9a5a3cd1fbfa27b78e1e6
+EBUILD readline-5.2_p4.ebuild 2932 RMD160 a0c95f9fa043a7fc840da28ff3fb228ee223a63a SHA1 30f0965e43906e0a8d6dc9bd7be567ee6540e5d3 SHA256 842058b5bd2dbc3e419ab15707c81e26d3f567da8d0dcbb5392aff125d4c01b3
+MISC ChangeLog 12058 RMD160 cd37e0acf6dd9abbdf72701b1ca26b58c3581b91 SHA1 42f2adc15123c178cee768bb05c80f2a3153c8c9 SHA256 6a2edd19d62aeb853d2c95f59db2113365653e6c62daa3157e3815c33f40255f
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
